package NYT.NCypress.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqLock
{
}

message TRspLock
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqCreate
{
    required bytes Manifest = 1;
}

message TRspCreate
{
    required bytes NodeId = 1;
}

////////////////////////////////////////////////////////////////////////////////

